[package]
name = "wasi-tests"
version = "0.9.0"
authors = ["The Wasmtime Project Developers"]
readme = "README.md"
edition = "2018"
publish = false

[dependencies]
libc = "0.2.65"
wasi = { git = "https://github.com/ueno/rust-wasi.git", rev = "21c1785ff1c0b99b789fa7fdf93c8f5984d10102" }
more-asserts = "0.2.1"

# This crate is built with the wasm32-wasi target, so it's separate
# from the main Wasmtime build, so use this directive to exclude it
# from the parent directory's workspace.
[workspace]
